--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -922,9 +922,10 @@ html {
 
 .input-with-icon input {
   width: 100%;
-  padding-left: 3rem;
+  padding-left: 3.25rem;
   padding-right: 1rem;
   transition: all 0.3s ease;
+  text-indent: 0;
 }
 
 /* Padding spécial pour les inputs avec toggle password */
